--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-  <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+<html>
 
- <script src="" charset="utf-8" type="text/javascript">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link rel="stylesheet" href="style.css">
+</head>
 
- </script>
-  </body>
-  </html>
+<body>
+
+  <div class="search">
+    <label for="search">Search: </label>
+    <input type="text" id="search_bar">
+    <button id='button' type="button" name="button">Search</button>
+  </div>
+
+  <div class="displayOutput">
+
+    <script src="main.js" charset="utf-8" type="text/javascript"></script>
+
+</body>
+
+</html>
