added some css. it looks HORRIBLE.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
 
 <body>
 
-  <div class="search">
-    <label for="search">Search: </label>
-    <input type="text" id="search_bar">
-    <button id='button' type="button" name="button">Search</button>
-  </div>
+    <header>
 
-  <div class="displayOutput">
+      <div class="search">
+        <label for="search">Search: </label>
+        <input type="text" id="search_bar">
+        <button id='button' type="button" name="button">Search</button>
+      </div>
+
+    </header>
+
+    <div id="content">
+
+      <div class="displayOutput">
+
+      </div>
+
+    </div>
 
     <script src="main.js" charset="utf-8" type="text/javascript"></script>
 
